<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, main!</string>
    <string name="app_name">Shisha Manager</string>
    <string name="newsession">New Session</string>
    <string name="endsession">End Session</string>
    <string name="pleaseclick">Please click anywhere on the screen to start the session!</string>
    <string name="timeouttext">Timeout</string>
    <string name="timeouthelp">Please set the time, as long as one member of the team can hold the Shisha within one round.</string>
    <string name="defaulttimeout">120</string>
    <string name="seconds">seconds</string>
    <string name="userlist">Users</string>
    <string name="adduser">Add User</string>
    <string name="button_startsession">Start Session</string>
    <string name="adduser_helptext">Please tell us, who will be there in this session! Take care of the sitting order!</string>
    <string name="error_empty_user_list">Please add at least one player, before starting the session!</string>
    <string name="error_no_timeout_set">Please set the timeout!</string>
    <string name="please_tap_to_start_new_session">Please tap anywhere on the screen to start a new session!</string>
    <string name="pause">Pause</string>
    <string name="paused_infotext">Session paused. Please click on \'Resume\' to continue!</string>
    <string name="resume">Resume</string>
    <string name="exit_app">Exit application</string>
    <string name="areyousure_exit">Are you sure you want to quit?</string>
    <string name="yes">Yes</string>
    <string name="nope">Nope</string>
    <string name="statistics">Statistics</string>
    <string name="usageRounds">Usage times per round</string>
    <string name="usageTimes">Shisha usage times</string>
    <string name="round">Round</string>
    <string name="timesec">Time (sec)</string>
    <string name="share">Share</string>
    <string name="sharetext">Text to share:</string>
    <string name="addchart">Add chart as Image</string>
    <string name="textshareDefault">I\'ve just had a great time with my friends and with my shisha!</string>
    <string name="title_activity_summary">SummaryActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <string-array name="titlePageIndicatorTitles">
        <item>@string/statistics</item>
        <item>@string/usageRounds</item>
        <item>@string/share</item>
    </string-array>

    <string name="rate_title">Rate Shisha Manager</string>
    <string name="rate_descr">"If you enjoy using Shisha Manager, please take a moment to rate it. Thanks for your support!</string>
    <string name="rate_button_rate">Rate Shisha Manager</string>
    <string name="rate_button_remind_later">Remind me later</string>
    <string name="rate_button_no_thanks">No thanks!</string>
    <string name="donate_title">Donate me!</string>
    <string name="menu_donate">Donate!</string>
	<string name="donate_descr">If you like this application, and you would like me to make updates, please invite me to a Shisha session by sending me a donation via PayPal. :)</string>
	<string name="donate_button_donate">I will invite you! :)</string>
    <string name="donate_button_remind_later">Remind me later!</string>
    <string name="donate_button_no_thanks">No thanks!</string>
</resources>