<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
     >

    <TextView
        android:id="@+id/sharetext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/shareUserText"
        android:layout_alignParentTop="true"
        android:layout_marginTop="82dp"
        android:text="@string/sharetext" />

    <EditText
        android:id="@+id/shareUserText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sharetext"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:text="@string/textshareDefault" />

    <CheckBox
        android:id="@+id/uploadImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/shareUserText"
        android:layout_below="@+id/shareUserText"
        android:text="@string/addchart" />

    <Button
        android:id="@+id/share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/uploadImage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/share" />

</RelativeLayout>