<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_share_host"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/tv_share_texttoshare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/et_share_sharetext"
        android:layout_alignParentTop="true"
        android:layout_marginTop="82dp"
        android:text="@string/sharetext" />

    <EditText
        android:id="@+id/et_share_sharetext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_share_texttoshare"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:text="@string/textshareDefault" />

    <CheckBox
        android:id="@+id/cb_share_uploadimage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/et_share_sharetext"
        android:layout_below="@+id/et_share_sharetext"
        android:text="@string/addchart" />

    <Button
        android:id="@+id/btn_share_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cb_share_uploadimage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/share" />

</RelativeLayout>